   * added an `OBLBDURATION` (seconds) setting to optionally delay raising
     the alarm for immediate shutdown in critical situation. [#321]

 - common code: root-owned daemons now use not the hard-coded `PIDPATH` value
   set by the `configure` script during build, but can override it with a
   `NUT_PIDPATH` environment variable in certain use-cases (such as tests).
   [#2407]


Release notes for NUT 2.8.2 - what's new since 2.8.1
----------------------------------------------------

https://github.com/networkupstools/nut/milestone/10

 - Fix fallout of development in NUT v2.8.0 and/or v2.8.1:
   * dstate machinery: a segmentation fault (null pointer dereference) was
     possible with `INSTCMD` processing of commands without parameters nor
     `TRACKING` identifier. [#2155]
   * USB bus number detection for libusb-1.0 builds was overly zealous and
     wrongly considered zero values as an error. [#2198]
   * `upsmon` recognition of `CAL` state could linger after the calibration
     activity was completed by the hardware, which led to mis-processing of
     shutdown triggers. Also, notification was added to report "finished
     calibration". [issue #2168, PR #2169]
   * `upsmon` recognition of `OFF` state as a trigger for FSD (forced shut
     down) criticality considered also the input line state, which may be
     an independently evolving circumstance. [issue #2278, PR #2279]
   * `upsmon` support for `POLLFAIL_LOG_THROTTLE_MAX` did not neuter the
     applied setting when live-reloading configuration, so commenting it
     away in `upsmon.conf` did not have the effect of resetting the logging
     frequency to default. It also did not reset the counters to certainly
     follow the new configuration for existing faults. [issue #2207, PR #2209]
   * `upsmon` support for `POLLFAIL_LOG_THROTTLE_MAX` had an off-by-one error
     (e.g. reporting "Data stale" or "Driver not connected" every 30 sec with